change code name

--- a/CV.html
+++ b/CV.html
@@ -13,7 +13,7 @@
     <!-- HEADING BAR -->
 
     <ul>
-      <li class="LC">Luke Costelloe</li>
+      <li class="LC">HAOEFSJDFOSN</li>
       <li><img class="theselogos" src="images/theselogos.png" /></li>
       <li><img class="photoshoplogo" src="images/ps.png" /></li>
       <li>
