--- a/CV.html
+++ b/CV.html
@@ -12,9 +12,7 @@
   <body>
     <ul>
       <li class="LC">Luke Costelloe</li>
-      <li>
-        <a href="https://www.instagram.com/luke_costelloe_/?hl=en">Instagram</a>
-      </li>
+
       <li>
         <a href="https://github.com/lukostelloe">GitHub</a>
       </li>
@@ -33,19 +31,17 @@
       <p>Développeur Web Junior</p>
       <p>30 ans, 13 Boulevard Carnot Nice 06300, 0644879902</p>
     </header>
-
+    <h3 class="welcomeline">Welcome to my landing page!</h3>
     <div id="grid">
       <div class="aboutme">
         <h2 class="heading">A little bit about me</h2>
         <p>
-          En reconversion professionnelle, je veux m'insérer sur le long terme
-          dans la filière informatique en France. Mon objectif est de moi ancien
-          au métier de développeur web / web mobile au sein de l'école Simplon à
-          Agréable. Rigoureux, motivé doté d'une grande capacité d'adaptation je
-          suis prêt à m'investir à cent pour cent dans la réussite de mon
-          projet.
+          I'm currently training to create websites that are simple yet
+          beautiful. Interactive. A website that actually says something about
+          who you are and what you do. If you have a new idea, whether business,
+          social, artistic or otherwise, I want to make the website for you!
+          Have a look around and hopefully I'll hear from you soon. Luke
         </p>
-        <img id="face" class="textwrap" src="images/myface.PNG" />
       </div>
 
       <div class="progress">
@@ -54,15 +50,11 @@
           <div class="progressbar">
             <div>
               <h2>Francais</h2>
-              <div class="meter">
-                <span style="width: 80%"></span>
-              </div>
             </div>
+            <progress id="progressbar" value="80" max="100"></progress>
             <div>
               <h2>Anglais</h2>
-              <div class="meter2">
-                <span style="width: 100%"></span>
-              </div>
+              <progress id="progressbar" value="100" max="100"></progress>
             </div>
           </div>
         </div>
