small text changes

--- a/CV.html
+++ b/CV.html
@@ -105,7 +105,9 @@
                 style="width: 50%"
               />
               <div class="middle">
-                <div class="text">"Luke is the man!" Dimitri</div>
+                <div class="text">
+                  "Luke is a pleasure to work with!" Dimitri
+                </div>
               </div>
             </div>
 
