some css, scrollbar

--- a/CV.html
+++ b/CV.html
@@ -27,11 +27,11 @@
     <!-- HEADER -->
 
     <header class="header">
-      <p id="headername">Luke Costelloe</p>
-      <p>Développeur Web Junior</p>
+      <h2 id="headername">Luke Costelloe</h2>
+      <h3>Développeur Web Junior</h3>
       <p>30 ans, 13 Boulevard Carnot Nice 06300, 0644879902</p>
     </header>
-    <h3 class="welcomeline">Welcome to my landing page!</h3>
+    <h3 class="welcomeline">Welcome to my page!</h3>
     <div id="grid">
       <div class="aboutme">
         <h2 class="heading">A little bit about me</h2>
@@ -39,8 +39,8 @@
           I'm currently training to create websites that are simple yet
           beautiful. Interactive. A website that actually says something about
           who you are and what you do. If you have a new idea, whether business,
-          social, artistic or otherwise, I want to make the website for you!
-          Have a look around and hopefully I'll hear from you soon. Luke
+          social, artistic or otherwise, I want to make a website for you! Have
+          a look around and hopefully I'll hear from you soon. Luke
         </p>
       </div>
 
@@ -72,13 +72,12 @@
 
       <div class="competences">
         <h2 class="heading">Competences</h2>
-        <p>
-          Maîtrise de l'outil informatique Programmation en JavaScript Service
-          et relations client Capable de travailler au sein d'environnements
-          dynamiques Bilingue en français et en anglais Excellente gestion du
-          temps et très organiser Travail en équipe Créativité Enthousiasme pour
-          le défi
-        </p>
+        <p>Efficient in HTML,CSS and JS</p>
+        <p>Experience in customer relations and client-based environments</p>
+        <p>Bilingual in French and English</p>
+        <p>Organised and efficient</p>
+        <p>Excellent team player</p>
+        <p>Creative</p>
       </div>
 
       <section class="quote">
@@ -188,7 +187,7 @@
       <p>
         Auteur: Luke Costelloe - 2021
         <a href="mailto:lukostelloe@gmail.com">lukostelloe@gmail.com</a>
-        <img class="theselogos" src="images/theselogos.png" />
+        <img class="htmlcssjs" src="images/theselogos.png" />
         <img class="photoshoplogo" src="images/ps.png" />
       </p>
     </footer>
