--- a/CV.html
+++ b/CV.html
@@ -71,13 +71,13 @@
       </div>
 
       <div class="competences">
-        <h2 class="heading">Competences</h2>
-        <p>Efficient in HTML,CSS and JS</p>
-        <p>Experience in customer relations and client-based environments</p>
-        <p>Bilingual in French and English</p>
-        <p>Organised and efficient</p>
-        <p>Excellent team player</p>
-        <p>Creative</p>
+        <h2>Competences</h2>
+        <div class="complogos">
+          <img class="clogos" src="Images/html5logo.jpg" />
+          <img class="clogos" src="Images/css3logo.jpg" />
+          <img class="clogos" src="Images/javascriptlogo.jpg" />
+          <img class="clogos" src="Images/bootstraplogo.jpg" />
+        </div>
       </div>
 
       <section class="quote">
