css styling on logos

--- a/CV.html
+++ b/CV.html
@@ -74,9 +74,13 @@
         <h2>Competences</h2>
         <div class="complogos">
           <img class="clogos" src="Images/html5logo.jpg" />
+          <p class="descriptions">Beautifully designed websites with HTML</p>
           <img class="clogos" src="Images/css3logo.jpg" />
+          <p class="descriptions">Impressive stylings with CSS</p>
           <img class="clogos" src="Images/javascriptlogo.jpg" />
+          <p class="descriptions">Intuitive and fun interactions with JS</p>
           <img class="clogos" src="Images/bootstraplogo.jpg" />
+          <p class="descriptions">Fast results with bootstrap</p>
         </div>
       </div>
 
