--- a/CV.html
+++ b/CV.html
@@ -51,10 +51,10 @@
             <div>
               <h2>Francais</h2>
             </div>
-            <progress id="progressbar" value="80" max="100"></progress>
+            <progress class="progressbars" value="80" max="100"></progress>
             <div>
               <h2>Anglais</h2>
-              <progress id="progressbar" value="100" max="100"></progress>
+              <progress class="progressbars" value="100" max="100"></progress>
             </div>
           </div>
         </div>
@@ -76,7 +76,7 @@
           <img class="clogos" src="Images/html5logo.jpg" />
           <p class="descriptions">Beautifully designed websites with HTML</p>
           <img class="clogos" src="Images/css3logo.jpg" />
-          <p class="descriptions">Impressive stylings with CSS</p>
+          <p class="descriptions">Subtle but impressive stylings with CSS</p>
           <img class="clogos" src="Images/javascriptlogo.jpg" />
           <p class="descriptions">Intuitive and fun interactions with JS</p>
           <img class="clogos" src="Images/bootstraplogo.jpg" />
