--- a/CV.html
+++ b/CV.html
@@ -73,13 +73,13 @@
       <div class="competences">
         <h2>Competences</h2>
         <div class="complogos">
-          <img class="clogos" src="Images/html5logo.jpg" />
+          <img class="clogos" src="html5logo.jpg" />
           <p class="descriptions">Beautifully designed websites with HTML</p>
-          <img class="clogos" src="Images/css3logo.jpg" />
+          <img class="clogos" src="css3logo.jpg" />
           <p class="descriptions">Subtle but impressive stylings with CSS</p>
-          <img class="clogos" src="Images/javascriptlogo.jpg" />
+          <img class="clogos" src="javascriptlogo.jpg" />
           <p class="descriptions">Intuitive and fun interactions with JS</p>
-          <img class="clogos" src="Images/bootstraplogo.jpg" />
+          <img class="clogos" src="bootstraplogo.jpg" />
           <p class="descriptions">Fast results with bootstrap</p>
         </div>
       </div>
@@ -90,7 +90,7 @@
           <div class="faces">
             <div class="container">
               <img
-                src="Images/abdiel.jpg"
+                src="abdiel.jpg"
                 alt="Avatar"
                 class="image"
                 style="width: 50%"
@@ -102,7 +102,7 @@
 
             <div class="container">
               <img
-                src="Images/dimitri.JPG"
+                src="dimitri.JPG"
                 alt="Avatar"
                 class="image"
                 style="width: 50%"
@@ -116,7 +116,7 @@
 
             <div class="container">
               <img
-                src="Images/kevin.png"
+                src="kevin.png"
                 alt="Avatar"
                 class="image"
                 style="width: 50%"
@@ -191,8 +191,8 @@
       <p>
         Auteur: Luke Costelloe - 2021
         <a href="mailto:lukostelloe@gmail.com">lukostelloe@gmail.com</a>
-        <img class="htmlcssjs" src="images/theselogos.png" />
-        <img class="photoshoplogo" src="images/ps.png" />
+        <img class="htmlcssjs" src="theselogos.png" />
+        <img class="photoshoplogo" src="ps.png" />
       </p>
     </footer>
   </body>
