added blank target

--- a/CV.html
+++ b/CV.html
@@ -14,14 +14,16 @@
       <li class="LC">Luke Costelloe</li>
 
       <li>
-        <a href="https://github.com/lukostelloe">GitHub</a>
+        <a href="https://github.com/lukostelloe" target="_blank">GitHub</a>
       </li>
       <li>
-        <a href="https://www.linkedin.com/in/luke-costelloe-7a88b7139/"
+        <a
+          href="https://www.linkedin.com/in/luke-costelloe-7a88b7139/"
+          target="_blank"
           >Linkedin</a
         >
       </li>
-      <li><a href="mailto:lukostelloe@gmail.com">Email</a></li>
+      <li><a href="mailto:lukostelloe@gmail.com" target="_blank">Email</a></li>
     </ul>
 
     <!-- HEADER -->
