updating to English

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <header class="header">
       <h2 id="headername">Luke Costelloe</h2>
-      <h3>Développeur Web Junior</h3>
+      <h3>Junior Web Developer</h3>
       <p>30 ans, 13 Boulevard Carnot Nice 06300, 0644879902</p>
     </header>
     <h3 class="welcomeline">Welcome to my page!</h3>
@@ -42,20 +42,20 @@
           beautiful. Interactive. A website that actually says something about
           who you are and what you do. If you have a new idea, whether business,
           social, artistic or otherwise, I want to make a website for you! Have
-          a look around and hopefully I'll hear from you soon. Luke
+          a look around and hopefully I'll hear from you soon.
         </p>
       </div>
 
       <div class="progress">
-        <h2 class="heading">Langues</h2>
+        <h2 class="heading">Languages</h2>
         <div>
           <div class="progressbar">
             <div>
-              <h2>Francais</h2>
+              <h2>French</h2>
             </div>
             <progress class="progressbars" value="80" max="100"></progress>
             <div>
-              <h2>Anglais</h2>
+              <h2>English</h2>
               <progress class="progressbars" value="100" max="100"></progress>
             </div>
           </div>
@@ -65,15 +65,15 @@
       <div class="experpro">
         <h2 class="experience">Expérience Professionnelle</h2>
         <p>
-          Juin 2020 - Septembre 2020 Serveur / Barman - DZ , Tallard , Hautes -
+          Juin 2020 - Septembre 2020 Waiter / Barman - DZ , Tallard , Hautes -
           Alpes
         </p>
-        <p>Août 2018 - Décembre 2019 Barman - Ma Nolan's , Nice , 06</p>
-        <p>Mars 2017 - Avril 2018 Technicien de laboratoire - NVRL , Dublin</p>
+        <p>Août 2018 - Dccember 2019 Barman - Ma Nolan's , Nice , 06</p>
+        <p>Mars 2017 - April 2018 Laboratory Technician - NVRL , Dublin</p>
       </div>
 
       <div class="competences">
-        <h2>Competences</h2>
+        <h2>Technologies</h2>
         <div class="complogos">
           <img class="clogos" src="html5logo.jpg" />
           <p class="descriptions">Beautifully designed websites with HTML</p>
@@ -132,23 +132,23 @@
       </section>
 
       <div class="questionform">
-        <h2 class="heading">Souhaitez-vous me contacter?</h2>
+        <h2 class="heading">Contact me</h2>
         <form action="/action_page.php">
-          <label for="fname">Prénom</label>
+          <label for="fname">First Name</label>
           <input
             type="text"
             id="fname"
             name="firstname"
-            placeholder="Votre prénom.."
+            placeholder="First Name"
           />
 
-          <label for="lname">Nom</label>
+          <label for="lname">Last Name</label>
           <!-- <br /> -->
           <input
             type="text"
             id="lname"
             name="lastname"
-            placeholder="Votre nom.."
+            placeholder="Last name"
           />
           <!-- <br /> -->
 
@@ -158,26 +158,26 @@
             type="email"
             id="email"
             name="email"
-            placeholder="Votre email.."
+            placeholder="Your email"
           />
           <!-- <br /> -->
 
-          <label for="country">Pays</label>
+          <label for="country">Country</label>
           <!-- <br /> -->
           <select id="country" name="country">
             <option value="france">France</option>
-            <option value="canada">Irland</option>
+            <option value="canada">Ireland</option>
             <option value="usa">USA</option>
             <option value="UK">UK</option>
-            <option value="australie">Australie</option>
+            <option value="australie">Australia</option>
           </select>
           <!-- <br /> -->
-          <label for="subject">Matière</label>
+          <label for="subject">Subject</label>
           <!-- <br /> -->
           <textarea
             id="subject"
             name="subject"
-            placeholder="Écris quelque chose.."
+            placeholder="Write something"
             style="height: 100px"
             maxlength="500"
             ;
@@ -191,7 +191,7 @@
     <!-- FOOTER -->
     <footer>
       <p>
-        Auteur: Luke Costelloe - 2021
+        Luke Costelloe - 2021
         <a href="mailto:lukostelloe@gmail.com">lukostelloe@gmail.com</a>
         <img class="htmlcssjs" src="theselogos.png" />
         <img class="photoshoplogo" src="ps.png" />
