--- a/CV.html
+++ b/CV.html
@@ -35,7 +35,7 @@
     <header class="header">
       <h1>Luke Costelloe</h1>
       <p>Développeur Web Junior</p>
-      <p>30 ans, 13 Boulevard Carnot Nice 06300, 0644879902</p>
+      <p>200 Rue de Provence, La Saulce, 0644879902</p>
     </header>
     <img class="logo" src="images/logo.PNG" />
 
